--- a/dimension reduction/LaplacianEigenmaps.ipynb
+++ b/dimension reduction/LaplacianEigenmaps.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "7e77b74f-1486-4053-9136-43c699ffaee9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "ea61c764-a766-41e2-af7a-df707bf55791",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "ab8b72e4-fe4e-421e-af6d-a046b779bc6f",
    "metadata": {},
    "outputs": [],
@@ -211,8 +211,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "01a2d4b1-5839-41dd-a3d2-f4328372dd6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12.60084759,  2.15718601, -4.46050816],\n",
+       "       [ 7.7542987 , -3.14330252, -6.29370318],\n",
+       "       [-9.65239936,  5.65380578,  1.54293376],\n",
+       "       [-5.2841043 , -2.34149988,  6.88183799],\n",
+       "       [-1.01020229, -2.16404278,  0.19843834]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.random.normal(scale = 5, size = 15).reshape(5,3)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "da668a2a-fe5f-4f01-b7e0-f2f600e5a5b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.manifold import SpectralEmbedding"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c4dd57af-b6b0-458f-8cdd-cdbb019e45b7",
+   "id": "08a91906-13cd-433b-a63a-d97aa38c9aec",
    "metadata": {},
    "outputs": [],
    "source": []
